--- a/templates/plex_mate_tool_simple.html
+++ b/templates/plex_mate_tool_simple.html
@@ -108,10 +108,10 @@
 {{ macros.setting_buttons([['fix_yamlmusic_btn', 'yaml 가사정보 Fix']], left='yaml 가사정보 Fix', desc=None)}}
 
 {{ macros.m_hr() }}
-{{ macros.setting_input_text_and_buttons('remove_meta_id', '메타만 지우기', [['remove_meta_id_btn', '삭제']], value=arg['remove_meta_id'], desc=['영화, 시리즈, 아티스트, 앨범 메타ID.', '시즌, 에피소드, 트랙 ID는 지원하지 않음']) }}
+{{ macros.setting_input_text_and_buttons('tool_simple_remove_meta_id', '메타만 지우기', [['remove_meta_id_btn', '삭제']], value=arg['tool_simple_remove_meta_id'], desc=['영화, 시리즈, 아티스트, 앨범 메타ID.', '시즌, 에피소드, 트랙 ID는 지원하지 않음']) }}
 
 {{ macros.m_hr() }}
-{{ macros.setting_input_text_and_buttons('remove_db_by_folder', '폴더로 DB 정리', [['remove_db_by_folder_btn', '삭제']], value=arg['remove_db_by_folder'], desc=['폴더']) }}
+{{ macros.setting_input_text_and_buttons('tool_simple_remove_db_by_folder', '폴더로 DB 정리', [['remove_db_by_folder_btn', '삭제']], value=arg['tool_simple_remove_db_by_folder'], desc=['폴더']) }}
 
 
 
@@ -183,7 +183,7 @@ $("body").on('click', '#remove_trash_btn', function(e){
 
 $("body").on('click', '#remove_meta_id_btn', function(e){
   e.preventDefault();
-  globalSendCommandPage('remove_meta_id', $('#remove_meta_id').val());
+  globalSendCommandPage('remove_meta_id', $('#tool_simple_remove_meta_id').val());
 });
 
 $("body").on('click', '#fix_yamlmusic_btn', function(e){
@@ -193,7 +193,7 @@ $("body").on('click', '#fix_yamlmusic_btn', function(e){
 
 $("body").on('click', '#remove_db_by_folder_btn', function(e){
   e.preventDefault();
-  globalSendCommandPage('remove_db_by_folder', $('#remove_db_by_folder').val());
+  globalSendCommandPage('remove_db_by_folder', $('#tool_simple_remove_db_by_folder').val());
 });
 
 
