- 1.1.30 (2024.12.11)   - 휴지통 표시 제거에 아티스트 타입 섹션 추가

--- a/templates/plex_mate_tool_simple.html
+++ b/templates/plex_mate_tool_simple.html
@@ -90,7 +90,7 @@
 <div class="input-group col-sm-9">
   <select id="remove_trash_section_id" name="empty_episode_process_section_id" class="form-control form-control-sm">
     {% for item in arg['library_list'] %}
-      {% if item['section_type'] == 2 %}
+      {% if item['section_type'] in [2, 8] %}
         <option value="{{ item['id'] }}">{{item['name']}}</option>
       {% endif %}   
     {% endfor %}
