- 1.1.31 (2025.01.19)   - 대상 경로에  포함시 오류 발생 수정

--- a/templates/plex_mate_scan_browser.html
+++ b/templates/plex_mate_scan_browser.html
@@ -175,7 +175,7 @@ function setBrowserMaxheight(){
 }
 
 function browserCommand(cmd) {
-    let query = 'path=' + cmd.path;
+    let query = 'path=' + encodeURIComponent(cmd.path);
     query += '&scanByBin=' + (cmd.scanByBin ? cmd.scanByBin : '');
     query += '&recursive=' + (cmd.recursive ? cmd.recursive : '');
     query += '&async=' + (cmd.async ? cmd.async : '');
