--- a/templates/plex_mate_tool_simple.html
+++ b/templates/plex_mate_tool_simple.html
@@ -113,7 +113,25 @@
 {{ macros.m_hr() }}
 {{ macros.setting_input_text_and_buttons('tool_simple_remove_db_by_folder', '폴더로 DB 정리', [['remove_db_by_folder_btn', '삭제']], value=arg['tool_simple_remove_db_by_folder'], desc=['폴더']) }}
 
-
+{{ macros.setting_top('제목 색인 정리') }}
+<div class="input-group col-sm-9">
+  <select id="tool_simple_title_sort_section_id" name="tool_simple_title_sort_section_id" class="form-control form-control-sm">
+    {% for item in arg['library_list'] %}
+      {% if item['section_type'] == 1 or item['section_type'] == 2 %}
+        {% if loop.counter == 0 %}
+        <option value="{{ item['id'] }}" selected>{{item['name']}}</option>
+        {% else %}
+        <option value="{{ item['id'] }}">{{item['name']}}</option>
+        {% endif %}
+      {% endif %}
+    {% endfor %}
+  </select>
+  <div class="btn-group btn-group-sm flex-wrap mr-2" role="group">
+    <button id="tool_simple_title_sort_preview_btn" class="btn btn-sm btn-outline-success">미리보기</button>
+    <button id="tool_simple_title_sort_btn" class="btn btn-sm btn-outline-success">색인 정리</button>
+  </div>
+</div>
+{{ macros.setting_bottom('제목 색인의 한글 음절을 자음으로 정리') }}
 
 <script type="text/javascript">
 
@@ -196,7 +214,15 @@ $("body").on('click', '#remove_db_by_folder_btn', function(e){
   globalSendCommandPage('remove_db_by_folder', $('#tool_simple_remove_db_by_folder').val());
 });
 
+$("#tool_simple_title_sort_btn").on('click', function(e){
+  e.preventDefault();
+  globalSendCommandPage('tool_simple_title_sort', $('#tool_simple_title_sort_section_id').val(), 'False');
+});
 
+$("#tool_simple_title_sort_preview_btn").on('click', function(e){
+  e.preventDefault();
+  globalSendCommandPage('tool_simple_title_sort', $('#tool_simple_title_sort_section_id').val(), 'True');
+});
 
 
 
