--- a/templates/plex_mate_webhook_setting.html
+++ b/templates/plex_mate_webhook_setting.html
@@ -38,6 +38,11 @@
         {{ macros.setting_input_text('webhook_discord_events', '허용 이벤트', value=arg['webhook_discord_events'], desc=['지원: play, pause, stop, resume, scrobble, new. 빈칸 시 모두 허용']) }}
         {{ macros.setting_input_text('webhook_discord_url', '디스코드 웹훅 URL', value=arg['webhook_discord_url'], desc=['webhook 주소를 입력하세요']) }}
       </div>
+      {{ macros.setting_checkbox('webhook_title_sort', '제목 색인 정리', value=arg['webhook_title_sort']) }}
+        <div id="webhook_title_sort_div" style="display: none;">
+          {{ macros.setting_input_text_and_buttons('title_library_sections', '제목 색인 정리 라이브러리 ID', [['load_title_library_sections_btn', '라이브러리 조회']], value=arg['title_library_sections'], desc=['쉼표로 구분, 빈칸 시 전체']) }}
+          <div id="webhook_title_sort_result" class="mt-2 ps-2"></div>
+      </div>
       {{ macros.setting_checkbox('webhook_use_full', '전체 캐시 사용 (Full)', value=arg['webhook_use_full']) }}
       <div id="webhook_use_full_div" style="display: none;">
         {{ macros.setting_input_text_and_buttons('cache_library_sections_full', 'Full 캐시 라이브러리 ID', [['load_cache_full_sections_btn', '라이브러리 조회']], value=arg['cache_library_sections_full'], desc=['쉼표로 구분, 빈칸 시 전체']) }}
@@ -119,16 +124,22 @@ $(document).ready(function() {
 });
 
 $(document).ready(function(){
+  toggleSectionVisibility('webhook_title_sort', 'webhook_title_sort_div');
   toggleSectionVisibility('webhook_use_full', 'webhook_use_full_div');
   toggleSectionVisibility('webhook_use_preview', 'webhook_use_preview_div');
   toggleSectionVisibility('webhook_use_intro_marker', 'webhook_use_intro_marker_div');
   toggleIntroCopySection();
 
+  $('#webhook_title_sort').change(() => toggleSectionVisibility('webhook_title_sort', 'webhook_title_sort_div'));
   $('#webhook_use_full').change(() => toggleSectionVisibility('webhook_use_full', 'webhook_use_full_div'));
   $('#webhook_use_preview').change(() => toggleSectionVisibility('webhook_use_preview', 'webhook_use_preview_div'));
   $('#webhook_use_intro_marker').change(() => toggleSectionVisibility('webhook_use_intro_marker', 'webhook_use_intro_marker_div'));
   $('#webhook_intro_auto_copy').change(toggleIntroCopySection);
-  
+
+  $('#load_title_library_sections_btn').click(function(e){
+  e.preventDefault();
+  requestLibrarySections('title_library_sections', 'webhook_title_sort_result');
+  });
   $('#load_cache_full_sections_btn').click(function(e){
     e.preventDefault();
     requestLibrarySections('cache_library_sections_full', 'cache_full_sections_result');
